Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-30955

Assertion `thd->mdl_context.is_lock_owner(MDL_key::TABLE, table->s->db.str, table->s->table_name.str, MDL_SHARED)' failed in close_thread_table

Details

    Description

      --source include/galera_cluster.inc
      CREATE TABLE t (a CHAR(1) KEY);
      START TRANSACTION;
      HANDLER t OPEN;
      --disconnect node_1
      

      Leads to

      mysqld: /home/sciascid/Workspace/src/mariadb-server-test/sql/sql_base.cc:1054: void close_thread_table(THD*, TABLE**): Assertion `thd->mdl_context.is_lock_owner(MDL_key::TABLE, table->s->db.str, table->s->table_name.str, MDL_SHARED)' failed.
      

      Attachments

        Activity

          People

            sysprg Julius Goryavsky
            ramesh Ramesh Sivaraman
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.